@@ -3,7 +3,7 @@
 # This demonstration script creates a toplevel window containing
 # several label widgets.
 #
-# RCS: @(#) $Id: label.tcl,v 1.6 2004/12/21 11:56:35 dkf Exp $
+# RCS: @(#) $Id: label.tcl,v 1.7 2009/02/11 15:17:26 dkf Exp $
 
 if {![info exists widgetDemo]} {
     error "This script should be run from the \"widget\" demo."
@@ -35,7 +35,8 @@ label $w.left.l3 -text "Third label, sunken" -relief sunken
 pack $w.left.l1 $w.left.l2 $w.left.l3 -side top -expand yes -pady 2 -anchor w
 
 # Main widget program sets variable tk_demoDirectory
-label $w.right.bitmap -borderwidth 2 -relief sunken \
-	-bitmap @[file join $tk_demoDirectory images face.xbm]
-label $w.right.caption -text "Tcl/Tk Proprietor"
-pack $w.right.bitmap $w.right.caption -side top
+image create photo label.ousterhout \
+    -file [file join $tk_demoDirectory images ouster.png]
+label $w.right.picture -borderwidth 2 -relief sunken -image label.ousterhout
+label $w.right.caption -text "Tcl/Tk Creator"
+pack $w.right.picture $w.right.caption -side top
